<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReyZend1">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_castle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".CharlaConMarcus">

        <TextView
            android:id="@+id/textoBandido"
            android:layout_width="427dp"
            android:layout_height="208dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="224dp"
            android:background="@drawable/textobackground"
            android:fontFamily="@font/atma_medium"
            android:paddingLeft="90dp"
            android:paddingTop="50dp"
            android:paddingRight="80dp"
            android:paddingBottom="0dp"
            android:text="@string/txtRey1"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="272dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/rey" />

        <Button
            android:id="@+id/btnVerdad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="88dp"
            android:background="@drawable/btn_golpes"
            android:text="@string/eleccion_decir_verdad"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textoBandido" />

        <Button
            android:id="@+id/btnMentir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginTop="88dp"
            android:background="@drawable/btn_golpes"
            android:text="@string/eleccion_mentir"
            app:layout_constraintStart_toEndOf="@+id/btnVerdad"
            app:layout_constraintTop_toBottomOf="@+id/textoBandido" />

        <Button
            android:id="@+id/btnHuir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="56dp"
            android:background="@drawable/btn_golpes"
            android:text="@string/eleccion_huir"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnMentir"
            app:layout_constraintHorizontal_bias="0.462"
            app:layout_constraintStart_toEndOf="@+id/btnVerdad" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>