<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fin">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".Inicio">

        <Button
            android:id="@+id/golpe6"
            android:layout_width="166dp"
            android:layout_height="68dp"
            android:layout_marginStart="125dp"
            android:layout_marginTop="72dp"
            android:background="@drawable/btn_golpes"
            android:text="@string/volver_jugar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView11" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="354dp"
            android:layout_height="146dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/textobackground2"
            android:fontFamily="@font/atma_medium"
            android:paddingLeft="15dp"
            android:paddingTop="55dp"
            android:paddingRight="15dp"
            android:paddingBottom="10dp"
            android:text="@string/fin"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="600dp"
            android:layout_height="141dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/textobackground"
            android:fontFamily="@font/atma_medium"
            android:paddingLeft="5dp"
            android:paddingTop="36dp"
            android:paddingRight="5dp"
            android:paddingBottom="10dp"
            android:text="@string/txt_final"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="21sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="600dp"
            android:layout_height="141dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/textobackground"
            android:fontFamily="@font/atma_medium"
            android:paddingLeft="5dp"
            android:paddingTop="36dp"
            android:paddingRight="5dp"
            android:paddingBottom="10dp"
            android:text="@string/txt_final2"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="21sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>