<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EleccionMentira">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_castle"
        tools:context=".CharlaConMarcus">

        <TextView
            android:id="@+id/textoBandido"
            android:layout_width="427dp"
            android:layout_height="208dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="224dp"
            android:background="@drawable/textobackground"
            android:fontFamily="@font/atma_medium"
            android:paddingLeft="90dp"
            android:paddingTop="50dp"
            android:paddingRight="80dp"
            android:paddingBottom="0dp"
            android:text="@string/txtRey2"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="272dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/rey" />

        <Button
            android:id="@+id/btnTesoro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="64dp"
            android:background="@drawable/btn_golpes"
            android:text="@string/eleccion_tesoro"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textoBandido" />

        <Button
            android:id="@+id/btnTitulo"
            android:layout_width="152dp"
            android:layout_height="65dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="64dp"
            android:background="@drawable/btn_golpes"
            android:text="@string/eleccion_titulo_academio"
            app:layout_constraintStart_toEndOf="@+id/btnTesoro"
            app:layout_constraintTop_toBottomOf="@+id/textoBandido" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>