<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PeleaBandido">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_forest"
        tools:context=".PrimeraEleccion">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="411dp"
            android:layout_height="131dp"
            android:background="@android:color/holo_blue_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imagenPersonaje"
            android:layout_width="113dp"
            android:layout_height="120dp"
            android:layout_marginStart="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/mostrarVida"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/atma_medium"
            android:textColor="#000000"
            android:textSize="30sp"
            app:layout_constraintStart_toEndOf="@+id/imageView10"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/mostrarAtaque"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="64dp"
            android:fontFamily="@font/atma_medium"
            android:textColor="#000000"
            android:textSize="30sp"
            app:layout_constraintStart_toEndOf="@+id/imageView8"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/mostrarClase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="64dp"
            android:fontFamily="@font/atma_medium"
            android:textColor="#000000"
            android:textSize="30sp"
            app:layout_constraintStart_toEndOf="@+id/mostrarAtaque"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/mostrarNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/atma_medium"
            android:textColor="#000000"
            android:textSize="30sp"
            app:layout_constraintStart_toEndOf="@+id/mostrarVida"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@+id/imagenPersonaje"
            app:layout_constraintTop_toBottomOf="@+id/imageView10"
            app:srcCompat="@drawable/ataque" />

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toEndOf="@+id/imagenPersonaje"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/hp" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="162dp"
            android:layout_height="139dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            app:srcCompat="@drawable/bandido" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="212dp"
            android:layout_height="49dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="76dp"
            android:background="@drawable/textbox_enemy_details"
            android:fontFamily="@font/atma_medium"
            android:paddingLeft="70dp"
            android:paddingTop="10dp"
            android:text="@string/bandido_hp"
            android:textColor="#000000"
            android:textSize="24sp"
            app:layout_constraintStart_toEndOf="@+id/imageView7"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <Button
            android:id="@+id/golpe1"
            android:layout_width="166dp"
            android:layout_height="68dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="108dp"
            android:background="@drawable/btn_golpes"
            android:text="@string/golpe1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView7" />

        <Button
            android:id="@+id/golpe2"
            android:layout_width="166dp"
            android:layout_height="68dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="108dp"
            android:background="@drawable/btn_golpes"
            android:text="@string/golpe2"
            app:layout_constraintStart_toEndOf="@+id/golpe1"
            app:layout_constraintTop_toBottomOf="@+id/imageView7" />

        <Button
            android:id="@+id/cura"
            android:layout_width="166dp"
            android:layout_height="68dp"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="148dp"
            android:background="@drawable/btn_golpes"
            android:text="@string/cura"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/golpe2"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toEndOf="@+id/golpe1" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>