<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Inicio"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/textView"
        android:layout_width="354dp"
        android:layout_height="146dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/textobackground2"
        android:fontFamily="@font/atma_medium"
        android:paddingLeft="15dp"
        android:paddingTop="55dp"
        android:paddingRight="15dp"
        android:paddingBottom="10dp"
        android:text="@string/textoInicial"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="600dp"
        android:layout_height="141dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/textobackground"
        android:fontFamily="@font/atma_medium"
        android:paddingLeft="5dp"
        android:paddingTop="36dp"
        android:paddingRight="5dp"
        android:paddingBottom="10dp"
        android:text="@string/textoEscogerClase"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="34dp"
        android:layout_height="69dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="100dp"
        android:rotation="-45"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/knightBtn"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/chains" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="34dp"
        android:layout_height="69dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="24dp"
        android:rotation="-45"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="@+id/assasinBtn"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/chains" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="34dp"
        android:layout_height="69dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="100dp"
        android:rotation="-45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/mageBtn"
        app:srcCompat="@drawable/chains" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="34dp"
        android:layout_height="69dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="52dp"
        android:rotation="-45"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/assasinBtn"
        app:srcCompat="@drawable/chains" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="34dp"
        android:layout_height="69dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="12dp"
        android:rotation="-45"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="@+id/knightBtn"
        app:layout_constraintTop_toTopOf="@+id/knightBtn"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/chains" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="34dp"
        android:layout_height="69dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="27dp"
        android:rotation="-45"
        app:layout_constraintBottom_toBottomOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/mageBtn"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/chains" />

    <ImageButton
        android:id="@+id/assasinBtn"
        android:layout_width="129dp"
        android:layout_height="129dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@android:color/transparent"
        android:onClick="selectedClass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/assasin" />

    <ImageButton
        android:id="@+id/knightBtn"
        android:layout_width="129dp"
        android:layout_height="129dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@android:color/transparent"
        android:onClick="selectedClass"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/knight" />

    <ImageButton
        android:id="@+id/mageBtn"
        android:layout_width="129dp"
        android:layout_height="129dp"
        android:layout_marginTop="220dp"
        android:backgroundTint="@android:color/transparent"
        android:onClick="selectedClass"
        app:layout_constraintEnd_toEndOf="@+id/assasinBtn"
        app:layout_constraintHorizontal_bias="0.435"
        app:layout_constraintStart_toStartOf="@+id/knightBtn"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/mago" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="149dp"
        android:layout_height="64dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/textobackground"
        android:fontFamily="@font/atma_medium"
        android:gravity="fill_vertical"
        android:paddingLeft="5dp"
        android:paddingTop="10dp"
        android:paddingRight="5dp"
        android:paddingBottom="10dp"
        android:text="@string/tvAsesino"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/assasinBtn"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="@+id/assasinBtn"
        app:layout_constraintTop_toBottomOf="@+id/assasinBtn" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="166dp"
        android:layout_height="67dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/textobackground"
        android:fontFamily="@font/atma_medium"
        android:gravity="fill_vertical"
        android:paddingLeft="5dp"
        android:paddingTop="10dp"
        android:paddingRight="5dp"
        android:paddingBottom="10dp"
        android:text="@string/tvGuerrero"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/knightBtn"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="@+id/knightBtn"
        app:layout_constraintTop_toBottomOf="@+id/knightBtn" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="169dp"
        android:layout_height="63dp"
        android:layout_marginTop="4dp"

        android:background="@drawable/textobackground"
        android:fontFamily="@font/atma_medium"
        android:gravity="fill_vertical"
        android:paddingLeft="5dp"
        android:paddingTop="10dp"
        android:paddingRight="5dp"
        android:paddingBottom="10dp"
        android:text="@string/tvMago"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/mageBtn"
        app:layout_constraintHorizontal_bias="0.325"
        app:layout_constraintStart_toStartOf="@+id/mageBtn"
        app:layout_constraintTop_toBottomOf="@+id/mageBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>